--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container-fluid">
             <div class="row d-flex align-items-center">
                 <div  class="col-5">
-                    <h1>Web Designer</h1>
+                    <h1 class="pb-5">Web Designer ><span class="text-black"></span> </h1>
                     <br>
                     <h1>HI, I'AM WEB DESIGNER AND I'LIKE CODING AND DESIGNING. </h1>
                     <br>
@@ -45,7 +45,8 @@
                     <br>
 
                     <div class="btn btn-dark">Contact Us</div>
-                    <img src="istockphoto-845859930-612x612.jpg" alt="">
+                </div class="col-6">
+                <img src="istockphoto-845859930-612x612.jpg" alt="img-fluid" style="width: 40%;">
                 </div>
                 </div>  
             </div>
