--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 
                 <div  class="img-cont hidden w-full md:flex md:items-center md:w-auto ul-ui-container"> 
                     <img class="pfp" src="./img/prof.jpg" alt="image">
-                    <p style="color: rgba(0, 0, 0, 0.63);">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci, autem? lorem</p>
+                    <!-- <p style="color: rgba(0, 0, 0, 0.63);">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci, autem? lorem</p>
                     <p style="color: rgba(0, 0, 0, 0.404);">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci, autem? lorem</p>
-                    <p style="color: rgba(0, 0, 0, 0.212);">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci, autem? lorem</p>
+                    <p style="color: rgba(0, 0, 0, 0.212);">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci, autem? lorem</p> -->
                 </div>
             </div>
         </section>
